--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Kara</title>
+	<title>KaraRoutman</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -37,7 +37,7 @@
 	<section class="first">
 		<div class="blur">
 			<div class="first__container">
-				<div class="first__block">Пройди курс по уходу за собой и уже через 21 день <br> будешь выглядеть лучше </div>
+				<div class="first__block">Пройди курс по уходу за собой и уже через 7 день <br> будешь выглядеть лучше </div>
 				<div class="first__block">Трехнедельный обучающий курс по основам массажа, правильного питания и тренировок</div>
 				<div class="first__block">
 					<button>Заказать</button>
@@ -48,7 +48,7 @@
 	</section>
 	<section class="second">
 		<div class="second__container">
-			<div class="container__title">Курс по уходу за собой от Кары Роутман</div>
+			<div class="container__title">Курс по уходу за собой от Kara Routman</div>
 			<div class="container__content">
 				<div class="content__blocks">
 					<div class="content__block">
@@ -81,12 +81,12 @@
 	<section class="forth">
 		<div class="forth__container">
 			<div class="container__title">Программа курса</div>
-			<div class="container__subtitle">21 день до желанного будущего</div>
+			<div class="container__subtitle">7 дней до желаемого результата</div>
 			<div class="container__content">
-				<div class="wow content__block bounceInLeft" data-wow-duration="2s"><span>Введение</span><br>История массажа <br>Планирование своего дня <br>Уход за телом</div>
-				<div class="wow content__block bounceInRight" data-wow-duration="3s"><span>Практическая часть</span><br>Маски для лица<br>Первый приём массажа лица<br>Какие средства выбрать для ухода за собой</div>
-				<div class="wow content__block bounceInLeft" data-wow-duration="4s"><span>Зарядка по утрам, <br>новая техника массажа</span><br>Изучение схемы массажа и приемов<br>Питание, уход за своим телом<br>Второй прием массажа</div>
-				<div class="wow content__block bounceInRight" data-wow-duration="2s"><span>Повторение</span><br>Повторение всех схем<br>Изучение схем<br>Видео запись и обсуждение пройденного материала</div>
+				<div class="wow content__block bounceInLeft" data-wow-duration="2s"><span>Введение</span><br>История массажа <br>История тренировок <br>Планирование своего дня</div>
+				<div class="wow content__block bounceInRight" data-wow-duration="3s"><span>Основы</span><br>Маски для лица<br>Два приёма массажа лица: поглаживание, втирание<br>Утренняя тренировка<br>Какие средства по уходу за телом</div>
+				<div class="wow content__block bounceInLeft" data-wow-duration="4s"><span>Практическая часть</span><br>Третья и четвёртая техника массажа<br>Тренировка<br>Изучение схем</div>
+				<div class="wow content__block bounceInRight" data-wow-duration="2s"><span>Закрепление</span><br>Повторение всего<br>Видео запись и обсуждение пройденного материала<br>Тренировка</div>
 			</div>
 			<button type="button" name="button" class="container__bth">Дальше - больше</button>
 		</div>
@@ -98,7 +98,7 @@
 				<div class="container__title">Какой результат ты получишь?</div>
 				<div class="container__content">
 					<div class="container__block"><img src="" alt=""> <span>Поддержку от твоих единомышленников</span> <p>Чат 24/7</p></div>
-					<div class="container__block"><img src="" alt=""> <span>Главное – выработать привычку</span> <p>Спустя 21 день тебе не составит труда поддерживать свое тело и сознание в отличном состоянии</p></div>
+					<div class="container__block"><img src="" alt=""> <span>Главное – выработать привычку</span> <p>Спустя 7 дней тебе не составит труда поддерживать свое тело и сознание в отличном состоянии</p></div>
 					<div class="container__block"><img src="" alt=""> <span>Станешь уверенней</span> <p>За счёт ежедневных заданий и уроков вы почувствуйте себя увереннее</p></div>
 				</div>
 			</div>
@@ -109,18 +109,21 @@
 			<div class="container__title">Сколько это стоит?</div>
 			<div class="container__content">
 				<div class="container__block"><img src="" alt=""> <span>Пакет базовый</span><p>- Все уроки в записи<br>- Общий чат участников<br>- Доступ к урокам в течении 6 месяцев</p><span class="price">3500 рублей</span><button>Купить</button></div>
-				<div class="container__block"><img src="" alt=""> <span>Пакет VIP</span><p>- Все уроки в записи<br>- Общий чат участников<br>- Закрытый чат с личной консультацией от Кары<br>- Обратная связь от экспертов в индивидуальном порядке<br>- Доступ к урокам в течении 6 месяцев<br>- Консультация о верном оформлении профиля и помощь с этим<br>- Консультации о питании и программе тренировок с личным онлайн-тренером</p><span class="price">13990 рублей</span><button>Купить</button></div>
+				<div class="container__block"><img src="" alt=""> <span>Пакет VIP</span><p>- Все уроки в записи<br>- Общий чат участников<br>- Закрытый чат с личной консультацией от Kara<br>- Обратная связь от экспертов в индивидуальном порядке<br>- Доступ к урокам в течении 6 месяцев<br>- Консультация о верном оформлении профиля и помощь с этим<br>- Консультации о питании и программе тренировок с личным онлайн-тренером</p><span class="price">13990 рублей</span><button>Купить</button></div>
 				<div class="container__block"><img src="" alt=""> <span>Пакет индивидуальный</span><p>- Все уроки в записи<br>- Общий чат участников<br>- Доступ к урокам в течении 6 месяцев<br>- В подарок 1 личная консультация о верном оформлении профиля и занятие с онлайн-тренером</p><span class="price">5500 рублей</span><button>Купить</button></div>
 			</div>
 		</div>
 	</section>
 	<section class="seventh">
-		<div class="seventh__container">
-			<div class="container__title">А ещё ты получишь</div>
-			<div class="container__content">
-				<div class="wow container__block fadeInUp" data-wow-duration="2s"><span>1</span> <p>Понимание что всё зависит только от твоего усердства</p></div>
-				<div class="wow container__block fadeInUp" data-wow-duration="4s"><span>10</span> <p>Единомышленников которые смогут тебя поддержать и к которым ты сможешь обратиться за помощью</p></div>
-				<div class="wow container__block fadeInUp" data-wow-duration="6s"><span>100</span> <p>Эмоций каждый день из-за наблюдения за собственным развитием</p></div>
+		<div class="blur">
+
+			<div class="seventh__container">
+				<div class="container__title">А ещё ты получишь</div>
+				<div class="container__content">
+					<div class="wow container__block fadeInUp" data-wow-duration="2s"><span>1</span> <p>Понимание что всё зависит только от твоего усердства</p></div>
+					<div class="wow container__block fadeInUp" data-wow-duration="4s"><span>10</span> <p>Единомышленников которые смогут тебя поддержать и к которым ты сможешь обратиться за помощью</p></div>
+					<div class="wow container__block fadeInUp" data-wow-duration="6s"><span>100</span> <p>Эмоций каждый день из-за наблюдения за собственным развитием</p></div>
+				</div>
 			</div>
 		</div>
 	</section>
